--- a/App/src/app/layout/layout.page.html
+++ b/App/src/app/layout/layout.page.html
@@ -5,11 +5,11 @@
     <ion-tab-bar slot="bottom">
       <ion-tab-button (click)="navigateTo('/layout/blood-donations')">
         <ion-icon name="play-circle"></ion-icon>
-        Blood Donations
+        {{'bloodDonation' | translate}}
       </ion-tab-button>
       <ion-tab-button (click)="navigateTo('/layout/blood-requests')">
         <ion-icon name="radio"></ion-icon>
-        Blood Requests
+        {{'bloodRequest' | translate}}
       </ion-tab-button>
      
     </ion-tab-bar>
