--- a/App/src/app/layout/pages/tabs/blood-donations/blood-donations.page.html
+++ b/App/src/app/layout/pages/tabs/blood-donations/blood-donations.page.html
@@ -8,7 +8,7 @@
           <ion-back-button default-href="/layout/home"></ion-back-button>
         </ion-col>
         <ion-col size="6">
-          <ion-title class="ion-no-padding">Blood Donations</ion-title>
+          <ion-title class="ion-no-padding">{{'bloodDonation' | translate}}</ion-title>
         </ion-col>
         <ion-col size="2">
           <img class="filter-btn" src="../../../../../assets/filter.png" alt="filter" id="open-modal" expand="block">
@@ -17,9 +17,9 @@
               <ng-template>
                 <ion-header>
                   <ion-toolbar color="primary" style="display: flex; justify-content: space-between; align-items: center;">
-                    <ion-title style="flex-grow: 1; text-align: start;">Apply Filter</ion-title>
+                    <ion-title style="flex-grow: 1; text-align: start;">{{'applyFilter' | translate}}</ion-title>
                     <ion-buttons slot="end" style="position: absolute; right: 0;">
-                      <ion-button style="font-size: 14px;"  (click)="cancel()">Cancel</ion-button>
+                      <ion-button style="font-size: 14px;"  (click)="cancel()">{{'cancel' | translate}}</ion-button>
                     </ion-buttons>
                   </ion-toolbar>                  
                 </ion-header>
@@ -27,7 +27,7 @@
                   <ion-item>
                     <ion-grid>
                       <ion-row class="ion-padding-bottom">
-                        <ion-label>Blood Group</ion-label>
+                        <ion-label>{{'bloodGroup' | translate}}</ion-label>
                       </ion-row>
                       <ion-row class="ion-padding-bottom">
                         <ion-button 
@@ -53,23 +53,23 @@
                         </ion-button>
                       </ion-row> -->
                       <ion-row class="ion-padding-bottom">
-                        <ion-label>Blood Bank Name</ion-label>
+                        <ion-label>{{'bloodBankName' | translate}}</ion-label>
                       </ion-row>
                       <ion-row class="ion-padding-bottom">
                         <ion-col size="12">
                           <ion-item class="input-class mt-3" lines="none">
-                            <ion-input label-placement="stacked" type="text" placeholder="Enter Blood Bank Name Here" [(ngModel)]="bloodBankName">
+                            <ion-input label-placement="stacked" type="text" placeholder="{{'enterBloodBankName' | translate}}" [(ngModel)]="bloodBankName">
                             </ion-input>
                           </ion-item>
                         </ion-col>
                       </ion-row>
                       <ion-row class="ion-padding-bottom">
-                        <ion-label>Blood Donation Date</ion-label>
+                        <ion-label>{{'bloodDonationDate' | translate}}</ion-label>
                       </ion-row>
                       <ion-row class="ion-align-items-center ion-justify-content-center">
                         <ion-col size="12">
                           <ion-item class="input-class">
-                            <ion-label *ngIf="!donationDate" position="floating" labelPlacement="stacked">{{'Donation Date'}}</ion-label>
+                            <ion-label *ngIf="!donationDate" position="floating" labelPlacement="stacked">{{'donationDate' | translate}}</ion-label>
                             <p class="ion-margin-end">{{donationDate | date}}</p>
                             <ion-icon slot="end" color="primary" name="calendar-outline" datetime="datetime" class="ion-margin-top"
                               (click)="openCalender('donationDate')"></ion-icon>
@@ -85,12 +85,12 @@
                       <ion-row class="ion-padding-horizontal">
                         <ion-col class="ion-text-center">
                           <ion-button expand="block" (click)="clearSelections()">
-                            Clear
+                            {{'clear' | translate}}
                           </ion-button>
                         </ion-col>
                         <ion-col class="ion-text-center">
                           <ion-button expand="block" (click)="confirm()" [strong]="true">
-                            Confirm
+                            {{'confirm' | translate}}
                           </ion-button>
                         </ion-col>
                       </ion-row>
@@ -123,11 +123,11 @@
       <ion-item class="mt-2" lines="none">
         <ion-segment [(ngModel)]="activeSegment" [scrollable]="true">
           <ion-segment-button value="latest">
-            <ion-label class="ion-text-capitalize">Latest</ion-label>
+            <ion-label class="ion-text-capitalize">{{'latest' | translate}}</ion-label>
           </ion-segment-button>
 
           <ion-segment-button value="history">
-            <ion-label class="ion-text-capitalize">History</ion-label>
+            <ion-label class="ion-text-capitalize">{{'history' | translate}}</ion-label>
           </ion-segment-button>
         </ion-segment>
       </ion-item>
