--- a/App/src/app/layout/pages/request/request.page.html
+++ b/App/src/app/layout/pages/request/request.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar color="primary">
     <ion-back-button slot="start" default-href="/layout/home"></ion-back-button>
 
-    <ion-title class="ion-justify-content-center">Request</ion-title>
+    <ion-title class="ion-justify-content-center">{{'requestBlood' | translate}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
