--- a/App/src/app/auth/edit-profile/edit-profile/edit-profile.page.html
+++ b/App/src/app/auth/edit-profile/edit-profile/edit-profile.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="primary">
     <ion-back-button slot="start" default-href="/layout/home"></ion-back-button>
-    <ion-title>Edit-Profile</ion-title>
+    <ion-title>{{'editProfile' | translate}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -19,7 +19,7 @@
           <ion-row>
             <ion-col size="12">
               <ion-item class="input-class mt-3" lines="none">
-                <ion-input label="First Name" label-placement="stacked" type="text" placeholder="Enter First Name"
+                <ion-input label="{{'firstName' | translate}}" label-placement="stacked" type="text" placeholder="{{'firstName' | translate}}"
                   formControlName="firstName">
                 </ion-input>
               </ion-item>
@@ -28,7 +28,7 @@
           <ion-row>
             <ion-col size="12">
               <ion-item class="input-class mt-3" lines="none">
-                <ion-input label="Last Name" label-placement="stacked" type="text" placeholder="Enter Last Name"
+                <ion-input label="{{'lastName' | translate}}" label-placement="stacked" type="text" placeholder="{{'lastName' | translate}}"
                   formControlName="lastName">
                 </ion-input>
               </ion-item>
@@ -37,7 +37,7 @@
           <ion-row>
             <ion-col size="12">
               <ion-item class="input-class mt-3" lines="none">
-                <ion-input label="Email" label-placement="stacked" type="text" placeholder="Enter Email"
+                <ion-input label="{{'email' | translate}}" label-placement="stacked" type="text" placeholder="{{'email' | translate}}"
                   formControlName="email">
                 </ion-input>
               </ion-item>
@@ -46,8 +46,8 @@
           <ion-row>
             <ion-col size="12">
               <ion-item class="input-class mt-3" lines="none">
-                <ion-input [readonly]="true" label="Mobile Number" label-placement="stacked" type="text"
-                  placeholder="Enter Mobile Number" formControlName="mobileNo">
+                <ion-input [readonly]="true" label="{{'mobileNo' | translate}}" label-placement="stacked" type="text"
+                  placeholder="{{'mobileNo' | translate}}" formControlName="mobileNo">
                 </ion-input>
               </ion-item>
             </ion-col>
@@ -56,7 +56,7 @@
           <ion-row>
             <ion-col size="12">
               <ion-item class="input-class mt-3" lines="none">
-                <ion-input label="Pincode" label-placement="stacked" type="text" placeholder="Pincode"
+                <ion-input label="{{'pincode' | translate}}" label-placement="stacked" type="text" placeholder="{{'pincode' | translate}}"
                   formControlName="pincode">
                 </ion-input>
               </ion-item>
@@ -84,7 +84,7 @@
                     >{{'DOB' | translate }}</ion-label
                   > -->
                 <ion-text class="dob" *ngIf="!f['DOB'].value">
-                  DOB
+                  {{'DOB' | translate}}
                 </ion-text>
                 <p class="ion-margin-end">{{f['DOB'].value | date}}</p>
                 <ion-icon slot="end" color="primary" name="calendar-outline" datetime="datetime" class="ion-margin-top"
@@ -96,7 +96,7 @@
           <ion-row class="ion-align-items-center ion-justify-content-center">
             <ion-col size="12">
               <ion-item class="input-class mt-3">
-                <ion-label position="floating" labelPlacement="stacked">{{'State'}}
+                <ion-label position="floating" labelPlacement="stacked">{{'state'| translate}}
                 </ion-label>
                 <ionic-selectable [(ngModel)]="selectTable.state" [ngModelOptions]="{standalone: true}"
                   class="ion-text-capilatize" [items]="states" itemTextField="stateName" itemValueField="id"
@@ -111,7 +111,7 @@
           <ion-row class="ion-align-items-center ion-justify-content-center">
             <ion-col size="12">
               <ion-item class="input-class mt-3">
-                <ion-label position="floating" labelPlacement="stacked">District
+                <ion-label position="floating" labelPlacement="stacked">{{'District'| translate}}
                 </ion-label>
                 <ionic-selectable [(ngModel)]="selectTable.district" [ngModelOptions]="{standalone: true}"
                   class="ion-text-capilatize" [items]="district" itemTextField="districtName" itemValueField="id"
@@ -124,7 +124,7 @@
           <ion-row class="ion-align-items-center ion-justify-content-center">
             <ion-col size="12">
               <ion-item class="input-class mt-3">
-                <ion-label position="floating" labelPlacement="stacked">Tehsil
+                <ion-label position="floating" labelPlacement="stacked">{{'Tahsil'| translate}}
                 </ion-label>
                 <ionic-selectable [(ngModel)]="selectTable.tahsil" [ngModelOptions]="{standalone: true}"
                   class="ion-text-capilatize" [items]="tehsil" itemTextField="tahsilName" itemValueField="id"
@@ -138,7 +138,7 @@
           <ion-row class="ion-align-items-center ion-justify-content-center">
             <ion-col size="12">
               <ion-item class="input-class mt-3">
-                <ion-label position="floating" labelPlacement="stacked">Village
+                <ion-label position="floating" labelPlacement="stacked">{{'Village'| translate}}
                 </ion-label>
                 <ionic-selectable [(ngModel)]="selectTable.village" [ngModelOptions]="{standalone: true}"
                   class="ion-text-capilatize" [items]="village" itemTextField="villageName" itemValueField="id"
@@ -211,7 +211,7 @@
           <ion-row class="ion-align-items-center ion-justify-content-center">
             <ion-col size="12">
               <ion-button expand="full" shape="round" class="button ion-justify-content-end ion-padding" color="primary"
-                (click)="update()">Update
+                (click)="update()">{{'update' | translate}}
 
                 <!-- <img class="editForm" src="../../../assets/edit (1).png" alt=""> -->
               </ion-button>
