--- a/App/src/app/auth/profile/profile.page.html
+++ b/App/src/app/auth/profile/profile.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="primary">
     <ion-back-button slot="start" default-href="/layout/home"></ion-back-button>
-    <ion-title>Profile</ion-title>
+    <ion-title>{{'profile' | translate}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -23,28 +23,28 @@
     <ion-item>
       <ion-icon name="person-circle"></ion-icon>
       <ion-label class="head ion-margin-start ">
-      Full Name
+      {{'fullName' | translate}}
         <h3 class="fontSize">{{user?.firstName}} {{user?.lastName}}</h3>
       </ion-label>
     </ion-item>
     <ion-item>
       <ion-icon  name="mail"></ion-icon>
       <ion-label class="head ion-margin-start ">
-      Email
+      {{'email' | translate}}
         <h3 class="fontSize">{{user?.email}}</h3>
       </ion-label>
     </ion-item>
     <ion-item>
       <ion-icon name="call"></ion-icon>
       <ion-label class="head ion-margin-start ">
-      Mobile Number
+      {{'mobileNo' | translate}}
         <h3 class="fontSize">{{user?.mobileNo}}</h3>
       </ion-label>
     </ion-item>
     <ion-item>
       <ion-icon name="calendar-number"></ion-icon>
       <ion-label class="head ion-margin-start ">
-     Date of Birth
+     {{'DOB' | translate}}
         <h3 class="fontSize">{{user?.DOB}}</h3>
       </ion-label>
     </ion-item>
@@ -52,21 +52,21 @@
       <!-- <ion-icon name="fitness"></ion-icon> -->
       <ion-icon name="water"></ion-icon>
       <ion-label class="head ion-margin-start ">
-      Blood Group
+     {{'bloodGroup' | translate}}
         <h3 class="fontSize">{{user?.bloodGroup}}</h3>
       </ion-label>
     </ion-item>
     <ion-item>
       <ion-icon name="mail-unread"></ion-icon>
       <ion-label class="head ion-margin-start ">
-      Pincode 
+      {{'pincode' |translate}} 
         <h3 class="fontSize">{{user?.pincode}}</h3>
       </ion-label>
     </ion-item>
     <ion-item>
       <ion-icon name="location"></ion-icon>
       <ion-label class="head ion-margin-start ">
-      State
+      {{'state' | translate}}
         <h3 class="fontSize">{{user?.state}}</h3>
       </ion-label>
     </ion-item>
@@ -77,7 +77,7 @@
       class="edit-btn ion-justify-content-end ion-padding"
       color="primary"
       (click)="navigate()"
-      >Edit
+      >{{'edit' | translate}}
     </ion-button>
     </ion-item>
    
