--- a/App/src/app/layout/pages/menu/menu.page.html
+++ b/App/src/app/layout/pages/menu/menu.page.html
@@ -6,17 +6,17 @@
       <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
         <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" routerLinkActive="selected">
           <ion-icon aria-hidden="true" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
-          <ion-label>{{ p.title }}</ion-label>
+          <ion-label>{{ p.title | translate}}</ion-label>
         </ion-item>  
       </ion-menu-toggle>
 
 
-      <ion-menu-toggle>
-        <ion-item lines="none" (click)="logoutAlert()">
-          <ion-icon name="exit-outline" slot="start"></ion-icon>
-          <ion-label>Logout</ion-label>
-        </ion-item>
-      </ion-menu-toggle>
+        <ion-menu-toggle>
+          <ion-item lines="none" (click)="logoutAlert()">
+            <ion-icon name="exit-outline" slot="start"></ion-icon>
+            <ion-label>{{'logout' | translate}}</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
     </ion-list>
   </ion-content>
 </ion-menu>
