--- a/App/src/app/shared/models/donation-history/donation-history.component.html
+++ b/App/src/app/shared/models/donation-history/donation-history.component.html
@@ -1,11 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="primary">
-    <ion-back-button
-      slot="start"
-      defaultHref=""
-      (click)="dismiss()"
-    ></ion-back-button>
-    <ion-title>History</ion-title>
+    <ion-back-button slot="start" defaultHref="" (click)="dismiss()"></ion-back-button>
+    <ion-title>{{'history' | translate}}</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
@@ -13,7 +9,7 @@
     <ion-accordion value="first">
       <ion-item slot="header" color="light">
         <i class="fa-solid fa-file-lines"></i>
-        <ion-label class="ion-padding-horizontal">Blood Bank Details</ion-label>
+        <ion-label class="ion-padding-horizontal">{{"bloodBankDetails" | translate}}</ion-label>
       </ion-item>
       <div class="ion-padding accordion-collapsed" slot="content">
         <ion-card>
@@ -21,23 +17,23 @@
             <ion-grid>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">Blood Bank Name </ion-label>
+                  <ion-label class="head">{{"bloodBankName" | translate}}</ion-label>
                   <ion-label> : {{data?.bloodBankName}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">Location </ion-label>
+                  <ion-label class="head">{{"location" | translate}} </ion-label>
                   <ion-label> : {{data?.location}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">Donation Date </ion-label>
+                  <ion-label class="head">{{"donationDate" | translate}}</ion-label>
                   <ion-label> : {{data?.donationDate}}</ion-label>
                 </ion-col>
               </ion-row>
-             
+
             </ion-grid>
           </ion-card-content>
         </ion-card>
@@ -46,7 +42,7 @@
     <ion-accordion value="second" *ngIf="!!data.bloodRequest">
       <ion-item slot="header" color="light">
         <i class="fa-solid fa-droplet"></i>
-        <ion-label  class="ion-padding-horizontal">Beneficiary</ion-label>
+        <ion-label class="ion-padding-horizontal">{{"beneficiary" | translate}}</ion-label>
       </ion-item>
       <div class="ion-padding" slot="content">
         <ion-card>
@@ -54,95 +50,95 @@
             <ion-grid>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">Name</ion-label>
+                  <ion-label class="head">{{"Name" | translate}}</ion-label>
                   <ion-label>: {{data?.bloodRequest?.name}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">Age</ion-label>
+                  <ion-label class="head">{{"age" | translate}}</ion-label>
                   <ion-label>: {{data?.bloodRequest?.age}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">Gender</ion-label>
+                  <ion-label class="head">{{"gender" | translate}}</ion-label>
                   <ion-label>: {{data?.bloodRequest?.gender}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">Blood Group</ion-label>
+                  <ion-label class="head">{{"bloodGroup" | translate}}</ion-label>
                   <ion-label>: {{data?.bloodRequest?.bloodGroup}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">Blood Require Date</ion-label>
+                  <ion-label class="head">{{"RequireDate" | translate}}</ion-label>
                   <ion-label>: {{data?.bloodRequest?.bloodRequireDate}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">State</ion-label>
+                  <ion-label class="head">{{"state" | translate}}</ion-label>
                   <ion-label>: {{data?.bloodRequest?.state}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row *ngIf="!!data?.bloodRequest.district">
                 <ion-col size="12">
-                  <ion-label class="head">District</ion-label>
+                  <ion-label class="head">{{"District" | translate}}</ion-label>
                   <ion-label>: {{data?.bloodRequest?.district}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row *ngIf="!!data?.bloodRequest.tahsil">
                 <ion-col size="12">
-                  <ion-label class="head">Tehsil</ion-label>
+                  <ion-label class="head">{{"Tahsil" | translate}}</ion-label>
                   <ion-label>: {{data?.bloodRequest?.tahsil}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row *ngIf="!!data?.bloodRequest.village">
                 <ion-col size="12">
-                  <ion-label class="head">Village</ion-label>
+                  <ion-label class="head">{{"Village" | translate}}</ion-label>
                   <ion-label>: {{data?.bloodRequest?.village}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">Father/Husband</ion-label>
+                  <ion-label class="head">{{"Father/Husband" | translate}}</ion-label>
                   <ion-label>: {{data?.bloodRequest?.fatherOrHusband}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">Hemoglobin</ion-label>
+                  <ion-label class="head">{{"hemoglobin" | translate}}</ion-label>
                   <ion-label>: {{data?.bloodRequest?.hemoglobin}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">Illness</ion-label>
+                  <ion-label class="head">{{"illness" | translate}}</ion-label>
                   <ion-label>: {{data?.bloodRequest?.illness}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">Location</ion-label>
+                  <ion-label class="head">{{"location" | translate}}</ion-label>
                   <ion-label>: {{data?.bloodRequest?.location}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">Mobile Number</ion-label>
+                  <ion-label class="head">{{"mobileNo" | translate}}</ion-label>
                   <ion-label>: {{data?.bloodRequest?.mobileNo}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">Units</ion-label>
+                  <ion-label class="head">{{"units" | translate}}</ion-label>
                   <ion-label>: {{data?.bloodRequest?.units}}</ion-label>
                 </ion-col>
               </ion-row>
-            
+
             </ion-grid>
           </ion-card-content>
         </ion-card>
@@ -151,7 +147,7 @@
     <ion-accordion value="third">
       <ion-item slot="header" color="light">
         <i class="fa-solid fa-user"></i>
-        <ion-label  class="ion-padding-horizontal">Personal Details</ion-label>
+        <ion-label class="ion-padding-horizontal">{{"personalDetails" | translate}}</ion-label>
       </ion-item>
       <div class="ion-padding" slot="content">
         <ion-card>
@@ -159,73 +155,67 @@
             <ion-grid>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">First Name</ion-label>
+                  <ion-label class="head">{{"Name" | translate}}</ion-label>
                   <ion-label> : {{data?.name}}</ion-label>
                 </ion-col>
 
                 <ion-col size="12">
-                  <ion-label class="head">Gender</ion-label>
+                  <ion-label class="head">{{"gender" | translate}}</ion-label>
                   <ion-label> : {{data?.gender}}</ion-label>
                 </ion-col>
 
                 <ion-col size="12">
-                  <ion-label class="head">Age</ion-label>
+                  <ion-label class="head">{{"age" | translate}}</ion-label>
                   <ion-label> : {{data?.age}}</ion-label>
                 </ion-col>
 
                 <ion-col size="12">
-                  <ion-label class="head">State</ion-label>
+                  <ion-label class="head">{{"state" | translate}}</ion-label>
                   <ion-label> : {{data?.state}}</ion-label>
                 </ion-col>
 
                 <ion-col size="12" *ngIf="!!data.district">
-                  <ion-label class="head">District</ion-label>
+                  <ion-label class="head">{{"District" | translate}}</ion-label>
                   <ion-label> : {{data?.district}}</ion-label>
                 </ion-col>
 
                 <ion-col size="12" *ngIf="!!data.tahsil">
-                  <ion-label class="head">Tehsil</ion-label>
+                  <ion-label class="head">{{"Tahsil" | translate}}</ion-label>
                   <ion-label> : {{data?.tahsil}}</ion-label>
                 </ion-col>
 
                 <ion-col size="12" *ngIf="!!data.village">
-                  <ion-label class="head">Village</ion-label>
+                  <ion-label class="head">{{"Village" | translate}}</ion-label>
                   <ion-label> : {{data?.village}}</ion-label>
                 </ion-col>
 
                 <ion-col size="12">
-                  <ion-label class="head">Blood Group</ion-label>
+                  <ion-label class="head">{{"bloodGroup" | translate}}</ion-label>
                   <ion-label> : {{data?.bloodGroup}}</ion-label>
                 </ion-col>
 
                 <ion-col size="12">
-                  <ion-label class="head">Hemoglobin</ion-label>
+                  <ion-label class="head">{{"hemoglobin" | translate}}</ion-label>
                   <ion-label> : {{data?.hemoglobin}}</ion-label>
                 </ion-col>
                 <ion-col size="12">
-                  <ion-label class="head">Mobile No</ion-label>
+                  <ion-label class="head">{{"mobileNo" | translate}}</ion-label>
                   <ion-label> : {{data?.mobileNo}}</ion-label>
                 </ion-col>
 
                 <ion-col size="12">
-                  <ion-label class="head">Donation Date</ion-label>
+                  <ion-label class="head">{{"donationDate" | translate}}</ion-label>
                   <ion-label> : {{data?.donationDate}}</ion-label>
                 </ion-col>
 
                 <ion-col size="12">
-                  <ion-label class="head">Location</ion-label>
+                  <ion-label class="head">{{"location" | translate}}</ion-label>
                   <ion-label> : {{data?.location}}</ion-label>
                 </ion-col>
                 <ion-col size="12">
-                  <ion-icon
-                    *ngIf="data?.donor?.illness"
-                    name="checkbox"
-                  ></ion-icon>
-                  <ion-icon
-                    *ngIf="!data?.donor?.illness"
-                    name="close"
-                  ></ion-icon>
-                  <ion-label class="head donor-illness">Illness</ion-label>
+                  <ion-icon *ngIf="data?.donor?.illness" name="checkbox"></ion-icon>
+                  <ion-icon *ngIf="!data?.donor?.illness" name="close"></ion-icon>
+                  <ion-label class="head donor-illness">{{"illness" | translate}}</ion-label>
                 </ion-col>
 
               </ion-row>
